# VendaFlex

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  mypy.ini  pyproject.toml  pytest.ini
src/: app.py
src/handlers/: __init__.py  exception_handler.py  http_exception_handle.py
src/infra/: database.py  settings.py
src/models/: auth_model.py  hub_model.py  user_model.py
src/repository/: auth_repository.py  hub_repository.py  user_repository.py
src/router/: auth_router.py  hub_router.py  user_router.py
src/service/: BcryptService.py  auth_service.py  hub_service.py  jwt_service.py  user_service.py
src/service/middleware/: has_auth_role.py
tests/: test_intregated_user.py
tests/test_integrated/: test_integrated_hub.py
tests/test_integration/: test_integrated_auth.py  test_integrated_hub.py
